--- a/WB_Joint_Ownership/app/src/main/res/layout-land/activity_whitebord.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/activity_whitebord.xml
@@ -7,10 +7,32 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical"
-	android:padding="5dp">
+	>
+
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/main_tool_bar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="?attr/colorPrimary"
+		android:theme="?attr/actionBarTheme">
+		<!--android:minHeight="?attr/actionBarSize"-->
 
 		<include
-			layout="@layout/wb_tisement"/>
+			layout="@layout/wb_edit_panel"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
 
+	</android.support.v7.widget.Toolbar>
+
+	<view
+		android:id="@+id/wb_whitebord"
+		class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_margin="5dp"
+		android:layout_weight="1"
+		android:background="@android:color/background_light"/>
+	<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
+	<!--class="io.skyway.Peer.Browser.Canvas"-->
 
 </LinearLayout>
