--- a/WB_Joint_Ownership/app/src/main/res/layout/activity_whitebord.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout/activity_whitebord.xml
@@ -1,12 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".CS_WhitebordActivity">
-	<include
-		android:id="@+id/page2"
-		layout="@layout/wb_tisement"/>
-</android.support.constraint.ConstraintLayout>
+	android:orientation="vertical"
+	>
+
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/main_tool_bar"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="?attr/colorPrimary"
+		android:theme="?attr/actionBarTheme">
+		<!--android:minHeight="?attr/actionBarSize"-->
+
+		<include
+			layout="@layout/wb_edit_panel"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"/>
+
+	</android.support.v7.widget.Toolbar>
+	<!--<include-->
+	<!--layout="@layout/wb_tisement"/>-->
+
+
+
+	<view
+		android:id="@+id/main_whitebord"
+		class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_margin="5dp"
+		android:layout_weight="1"
+		android:background="@android:color/background_light"/>
+	<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
+	<!--class="io.skyway.Peer.Browser.Canvas"-->
+
+</LinearLayout>
