--- a/WB_Joint_Ownership/app/src/main/res/layout-land/activity_whitebord.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/activity_whitebord.xml
@@ -18,7 +18,7 @@
 		<!--android:minHeight="?attr/actionBarSize"-->
 
 		<include
-			layout="@layout/wb_edit_panel"
+			layout="@layout/whit_bord_cp"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"/>
 
