--- a/WB_Joint_Ownership/app/src/main/res/layout-land/activity_main.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/activity_main.xml
@@ -31,69 +31,80 @@
 		android:theme="?attr/actionBarTheme">
 
 		<LinearLayout
-			android:id="@+id/main_conect_ll"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="horizontal">
-
-			<Button
-				android:id="@+id/connect_bt"
-				android:layout_width="wrap_content"
-				android:layout_height="40dp"
-				android:text="@string/call_bt_caption2conect"/>
+			android:orientation="horizontal"
+			>
 
 			<LinearLayout
-				android:layout_width="wrap_content"
+				android:id="@+id/main_conect_ll"
+				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				android:layout_weight="1"
-				android:orientation="vertical">
+				android:orientation="horizontal">
 
-				<TextView
-					android:id="@+id/conect_situation_tv"
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="5dp"
-					android:layout_weight="1"
-					android:text="@string/now_conection_meg"/>
+				<Button
+					android:id="@+id/connect_bt"
+					android:layout_width="wrap_content"
+					android:layout_height="40dp"
+					android:text="@string/call_bt_caption2conect"/>
 
 				<LinearLayout
 					android:layout_width="match_parent"
 					android:layout_height="match_parent"
-					android:orientation="horizontal">
+					android:layout_weight="1"
+					android:orientation="vertical">
 
 					<TextView
-						android:id="@+id/tvPartnerId"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/partner_id_titol"/>
-
-					<TextView
-						android:id="@+id/tvOwnId"
+						android:id="@+id/conect_situation_tv"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:layout_marginRight="5dp"
-						android:text="@string/my_id_titol"
-						android:textAlignment="viewEnd"
-						app:layout_constraintBottom_toTopOf="@+id/svRemoteView"
-						app:layout_constraintLeft_toLeftOf="parent"
-						app:layout_constraintRight_toLeftOf="@+id/btnAction"
-						app:layout_constraintTop_toTopOf="parent"/>
+						android:layout_marginLeft="5dp"
+						android:layout_weight="1"
+						android:text="@string/now_conection_meg"/>
+
+					<LinearLayout
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:orientation="horizontal">
+
+						<TextView
+							android:id="@+id/tvPartnerId"
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							android:text="@string/partner_id_titol"/>
+
+						<TextView
+							android:id="@+id/tvOwnId"
+							android:layout_width="match_parent"
+							android:layout_height="wrap_content"
+							android:layout_marginRight="5dp"
+							android:text="@string/my_id_titol"
+							android:textAlignment="viewEnd"
+							app:layout_constraintBottom_toTopOf="@+id/svRemoteView"
+							app:layout_constraintLeft_toLeftOf="parent"
+							app:layout_constraintRight_toLeftOf="@+id/btnAction"
+							app:layout_constraintTop_toTopOf="parent"/>
+					</LinearLayout>
 				</LinearLayout>
 			</LinearLayout>
+
+			<include
+				layout="@layout/whit_bord_cp"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"/>
+
+			<ImageButton
+				android:id="@+id/main_mode_change_bt"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_gravity="right"
+				android:layout_marginLeft="40dp"
+				android:layout_marginRight="5dp"
+				android:src="@drawable/mode_selector"/>
+
 		</LinearLayout>
-
-		<include
-			layout="@layout/whit_bord_cp"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"/>
-
-		<ImageButton
-			android:id="@+id/main_mode_change_bt"
-			android:layout_width="40dp"
-			android:layout_height="40dp"
-			android:layout_gravity="right"
-			android:src="@drawable/mode_selector"/>
 
 	</android.support.v7.widget.Toolbar>
 
@@ -125,7 +136,7 @@
 			android:layout_gravity="top|right"
 			android:gravity="top|right"/>
 		<!--android:layout_weight="1" を外して全画面へ広げる-->
-                   		<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
+		<!--class="com.hijiyama_koubou.wb_joint_ownership.CS_CanvasView"-->
 		<!--class="io.skyway.Peer.Browser.Canvas"-->
 		<!--</android.support.constraint.ConstraintLayout>-->
 
