--- a/WB_Joint_Ownership/app/src/main/res/menu/main.xml
+++ b/WB_Joint_Ownership/app/src/main/res/menu/main.xml
@@ -7,13 +7,15 @@
 
 		<item
 			android:id="@+id/show_white_bord"
-			android:title="ホワイトボード"
-			/>
+			android:checkable="false"
+			android:icon="@android:drawable/ic_menu_directions"
+			android:title="ホワイトボード"/>
 		<!--<string name="">カメラ起動</string>-->
 		<item
 			android:id="@+id/show_web"
-			android:title="web"
-			/>
+			android:checkable="false"
+			android:icon="@android:drawable/ic_menu_share"
+			android:title="web"/>
 	</group>
 
 	<item
@@ -23,10 +25,12 @@
 		<menu>
 			<item
 				android:id="@+id/mm_prefarence"
+				android:checkable="false"
 				android:icon="@android:drawable/ic_menu_manage"
 				android:title="設定"/>
 			<item
 				android:id="@+id/mm_quit"
+				android:checkable="false"
 				android:icon="@android:drawable/ic_lock_power_off"
 				android:title="終了"/>
 
