--- a/WB_Joint_Ownership/app/src/main/res/layout-land/activity_main.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/activity_main.xml
@@ -38,8 +38,9 @@
 
 			<LinearLayout
 				android:id="@+id/main_conect_ll"
-				android:layout_width="match_parent"
+				android:layout_width="wrap_content"
 				android:layout_height="match_parent"
+				android:layout_gravity="left"
 				android:layout_weight="1"
 				android:orientation="horizontal">
 
@@ -59,7 +60,6 @@
 						android:id="@+id/conect_situation_tv"
 						android:layout_width="match_parent"
 						android:layout_height="wrap_content"
-						android:layout_marginLeft="5dp"
 						android:layout_weight="1"
 						android:text="@string/now_conection_meg"/>
 
@@ -93,7 +93,8 @@
 			<include
 				layout="@layout/whit_bord_cp"
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"/>
+				android:layout_height="wrap_content"
+				android:layout_weight="1"/>
 
 			<ImageButton
 				android:id="@+id/main_mode_change_bt"
@@ -102,6 +103,7 @@
 				android:layout_gravity="right"
 				android:layout_marginLeft="40dp"
 				android:layout_marginRight="5dp"
+				android:adjustViewBounds="false"
 				android:src="@drawable/mode_selector"/>
 
 		</LinearLayout>
