--- a/WB_Joint_Ownership/app/src/main/res/menu/main.xml
+++ b/WB_Joint_Ownership/app/src/main/res/menu/main.xml
@@ -6,6 +6,10 @@
 	<group android:checkableBehavior="single">
 
 		<item
+			android:id="@+id/show_str_chat"
+			android:checked="false"
+			android:title="文字チャット"/>
+		<item
 			android:id="@+id/show_white_bord"
 			android:checkable="false"
 			android:icon="@android:drawable/ic_menu_directions"
