--- a/WB_Joint_Ownership/app/src/main/res/values/dimens.xml
+++ b/WB_Joint_Ownership/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
 	<dimen name="fab_margin">
 		16dp
 	</dimen>
+
+
+	<!-- Default screen margins, per the Android Design guidelines. -->
+	<dimen name="activity_horizontal_margin">16dp</dimen>
+	<dimen name="activity_vertical_margin">16dp</dimen>
+
+	<dimen name="spacing">8dp</dimen>
+
+	
 </resources>
