--- a/WB_Joint_Ownership/app/src/main/res/menu/wev_cont.xml
+++ b/WB_Joint_Ownership/app/src/main/res/menu/wev_cont.xml
@@ -10,23 +10,53 @@
 			android:checkable="false"
 			android:checked="false"
 			android:title="再読込み"/>
-		<item
-			android:id="@+id/web_menu_rescaling"
-			android:checkable="false"
-			android:title="サイズ合わせ"/>
-		<item
-			android:id="@+id/web_menu_zoom_enable"
-			android:checkable="false"
-			android:icon="@android:drawable/ic_menu_directions"
-			android:title="ズーム有効"/>
 		<!--<string name="">カメラ起動</string>-->
 	</group>
-
+	<item android:title="移動">
+		<menu
+			>
+			<item
+				android:id="@+id/web_menu_url_change"
+				android:checkable="false"
+				android:title="URL指定"/>
+			<item
+				android:id="@+id/web_menu_hysteresis"
+				android:checkable="false"
+				android:title="履歴"/>
+			<item
+				android:id="@+id/web_menu_backpage"
+				android:title="前のページ"/>
+			<item
+				android:id="@+id/web_menu_prepage"
+				android:title="次のページ"/>
+		</menu>
+	</item>
+	<!--<item-->
+		<!--android:title="ブックマーク"-->
+		<!--&gt;-->
+  		<!--<menu-->
+			<!--&gt;-->
+			<!--<item-->
+				<!--android:id="@+id/web_menu_bookmark_set"-->
+				<!--android:title="登録"/>-->
+			<!--<item-->
+				<!--android:id="@+id/web_menu_bookmark_get"-->
+				<!--android:title="選択"/>-->
+		<!--</menu>-->
+	<!--</item>-->
 	<item
 		android:title="その他"
 		>
-
 		<menu>
+			<item
+				android:id="@+id/web_menu_rescaling"
+				android:checkable="false"
+				android:title="サイズ合わせ"/>
+			<item
+				android:id="@+id/web_menu_zoom_enable"
+				android:checkable="false"
+				android:icon="@android:drawable/ic_menu_directions"
+				android:title="ズーム有効"/>
 			<item
 				android:id="@+id/web_menu_quit"
 				android:checkable="false"
