--- a/WB_Joint_Ownership/app/src/main/res/menu/main.xml
+++ b/WB_Joint_Ownership/app/src/main/res/menu/main.xml
@@ -7,6 +7,7 @@
 
 		<item
 			android:id="@+id/show_str_chat"
+			android:checkable="false"
 			android:checked="false"
 			android:title="文字チャット"/>
 		<item
