--- a/WB_Joint_Ownership/app/src/main/res/layout-land/whit_bord_cp.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/whit_bord_cp.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  xmlns:app="http://schemas.android.com/apk/res-auto"
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent">
 
@@ -12,20 +13,39 @@
 
 		<ImageButton
 			android:id="@+id/wb_mode_bt"
-			android:layout_width="40dp"
-			android:layout_height="40dp"
+			android:layout_width="42dp"
+			android:layout_height="42dp"
 			android:src="@android:drawable/ic_menu_edit"/>
+
+		<ImageButton
+			android:id="@+id/wb_color_bt"
+			android:layout_width="42dp"
+			android:layout_height="42dp"
+			android:scaleType="centerCrop"
+			android:src="@drawable/color_paret"/>
 
 		<ImageButton
 			android:id="@+id/test_bt1"
 			android:layout_width="40dp"
-			android:layout_height="40dp"
+			android:layout_height="42dp"
 			android:src="@android:drawable/ic_input_get"/>
+
+		<TextView
+			android:id="@+id/wb_info_tv"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center_vertical"
+			android:maxLines="2"
+			android:singleLine="false"
+			android:text="TextView"
+			android:textAlignment="gravity"
+			android:textSize="12sp"/>
 
 		<ImageButton
 			android:id="@+id/wb_all_clear_bt"
-			android:layout_width="40dp"
-			android:layout_height="40dp"
+			android:layout_width="42dp"
+			android:layout_height="42dp"
 			android:layout_gravity="right|end"
 			android:src="@android:drawable/ic_menu_delete"/>
 
