--- a/WB_Joint_Ownership/app/src/main/res/layout-land/activity_whitebord.xml
+++ b/WB_Joint_Ownership/app/src/main/res/layout-land/activity_whitebord.xml
@@ -22,6 +22,25 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"/>
 
+		<TextView
+			android:id="@+id/wb_info_tv"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:gravity="center_vertical"
+			android:maxLines="2"
+			android:singleLine="false"
+			android:text="TextView"
+			android:textAlignment="gravity"
+			android:textSize="12sp"/>
+
+		<ImageButton
+			android:id="@+id/wb_all_clear_bt"
+			android:layout_width="42dp"
+			android:layout_height="42dp"
+			android:layout_gravity="right|end"
+			android:src="@android:drawable/ic_menu_delete"/>
+
 	</android.support.v7.widget.Toolbar>
 
 	<view
