不要リソース削除

--- a/WB_Joint_Ownership/app/src/main/res/xml/preferences.xml
+++ b/WB_Joint_Ownership/app/src/main/res/xml/preferences.xml
@@ -44,5 +44,16 @@
 
 	</PreferenceScreen>
 
+	<PreferenceScreen
+		android:key="socketio_setting_key"
+		android:title="@string/socketio_setting">
+
+		<Preference
+			android:key="socketio_url_key"
+			android:summary=""
+			android:title="@string/socketio_url"/>
+
+
+	</PreferenceScreen>
 
 </PreferenceScreen>
